# reVita

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  main.c  main.h  profile.h  reVita.yml  remaPSV.yml  remap.h  renderer.c  ui.c
kernel/: CMakeLists.txt  export.yml
kernel/src/: adrenaline.h  common.c  common.h  ds34vita.h  ds4vita.h  icons.h  ini.c  log.c  log.h  main.c  main.h  motion-kernel.c  profile.c  profile.h  remap.c  remap.h  remapsv.h  renderer.c  renderer.h  sysactions.c  sysactions.h  ui-control.c  ui-control.h  ui-draw.c  ui-draw.h  ui.c  ui.h  userspace.c  userspace.h  vitasdkext.c  vitasdkext.h
kernel/src/fio/: fio.c  fio.h  hotkeys.c  hotkeys.h  ini.c  profile.c  profile.h  settings.c  settings.h  theme.c  theme.h
kernel/src/gui/: font.h  gui.c  gui.h  icons.h  popup.c  renderer.c  renderer.h  rendererv.c
kernel/src/gui/img/: font.h  icons-font.h  icons.h
kernel/src/gui/menu/: menu-analog.c  menu-controller.c  menu-credits.c  menu-debug-buttons.c  menu-debug-hooks.c  menu-gyro.c  menu-hotkeys.c  menu-main.c  menu-pick-analog.c  menu-pick-button.c  menu-pick-touch.c  menu-profile.c  menu-remap.c  menu-settings.c  menu-touch.c  menu.h
reVita/: CMakeLists.txt  export.yml
reVita/src/: common.c  common.h  export.h  log.c  log.h  main.c  main.h  motion-kernel.c  motion-kernel.h  motion.c  remap.c  remap.h  revita.c  revita.h  sysactions.c  sysactions.h  userspace.c  userspace.h  vitasdkext.c  vitasdkext.h
reVita/src/fio/: fio.c  fio.h  hotkeys.c  hotkeys.h  ini.c  ini.h  profile.c  profile.h  settings.c  settings.h  theme.c
reVita/src/gui/: gui.c  gui.h  renderer.c  renderer.h  rendererv.h
reVita/src/gui/img/: icons-font.h
reVita/src/gui/menu/: menu-analog.c  menu-controller.c  menu-credits.c  menu-debug-buttons.c  menu-debug-hooks.c  menu-gyro.c  menu-hotkeys.c  menu-main.c  menu-more.c  menu-pick-analog.c  menu-pick-button.c  menu-pick-touch.c  menu-profile.c  menu-remap.c  menu-savemanager.c  menu-settings.c  menu-touch.c  menu-turbo.c  menu.c  menu.h
reVitaMotion/: CMakeLists.txt  export.yml
reVitaMotion/src/: log.c  log.h  main.c  main.h
src/: common.c  common.h  ctrl.c  ctrl.h  icons.h  ini.c  ini.h  log.c  log.h  main.c  main.h  profile.c  profile.h  remap.c  remap.h  renderer.c  renderer.h  ui-control.c  ui-control.h  ui-draw.c  ui-draw.h  ui.c  ui.h  vitasdkext.h
user/: CMakeLists.txt  export.yml
user/src/: DSMotionLibrary.h  log.c  log.h  main.c
